--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,3 @@
-
 # build artifacts
 
 .eggs/
@@ -54,6 +53,7 @@ site/
 smac3-output*
 *.csv
 *.json
+*.txt
 *.npy
 *.png
 *.joblib
@@ -62,7 +62,6 @@ smac3-output*
 *.pdf
 run_*
 *.pt
-examples
+*.log
 models
-scrtips
-tests
+examples
